--- a/style.css
+++ b/style.css
@@ -29,11 +29,10 @@
 }
 
 body {
-    /* font-family: Poppins, sans-serif; */
-    font-family: "Poppins";
+    font-family: Poppins, sans-serif;
+    /* font-family: "Poppins"; */
     font-weight: normal;
     font-style: normal;
-    /* font-family: sans-serif; */
     margin: 0;
     background-color: var(--background);
     color: var(--text);
@@ -96,6 +95,22 @@ body {
 main {
     margin-left: 4em;
     padding: 3em;
+}
+
+main img {
+    width: 10%;
+    float: left;
+}
+
+main h1 {
+    display: inline;
+    float: left;
+    margin-left: 5%;
+}
+
+article {
+    float: left;
+    margin-top: 5%;
 }
 
 .offers {
