--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 /*     font-style: normal; */
 /* } */
 
-@font-face {
+/* @font-face {
     font-family: "Poppins";
     src: url('assets/font/Poppins-Regular.ttf') format('truetype');
     font-weight: normal;
@@ -29,7 +29,7 @@
 }
 
 body {
-    font-family: Poppins, sans-serif;
+    font-family: 'DM Sans', Arial, sans-serif;
     /* font-family: "Poppins"; */
     font-weight: normal;
     font-style: normal;
